--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gulp-rev-replace",
-  "version": "0.4.4",
+  "name": "gulp-rev-replace2",
+  "version": "0.0.1",
   "description": "Rewrite occurences of filenames which have been renamed by gulp-rev",
   "main": "index.js",
   "repository": "ittiam/gulp-rev-replace",
